# shopeepy-wrapped

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  tox.ini
shopeepy_wrapped/: config.yml  href_manipulation.py  login.py  main.py  scrapee.py
shopeepy_wrapped/browser/: action.py  driver_setup.py  element_locator.py  scroll.py  wait.py  webdriver_wait.py  xpath.py
shopeepy_wrapped/browser_automation/: driver_setup.py  element_locator.py  scroll.py  webdriverwait.py  window_interxn.py
shopeepy_wrapped/config/: core.py
shopeepy_wrapped/data/: clean.py  cleaning.py  data_manager.py  trimming.py
shopeepy_wrapped/data_cleaning/: data_trimming.py
shopeepy_wrapped/href/: href_manipulation.py
shopeepy_wrapped/insighting/: insight.py
shopeepy_wrapped/parsing/: parse_orders.py  parse_products.py
shopeepy_wrapped/scrapee/: order.py  product.py  scrapee.py
shopeepy_wrapped/shopee_login/: credentials.py  login.py
shopeepy_wrapped/ui/: main.py  progress_bar.py
tests/: conftest.py  test_login.py  test_shopee_login.py  test_string_manipulation.py
