[tool.poetry]
name = "shopeepy-wrapped"
version = "0.1.0"
description = ""
authors = ["IK Manding <github@ianmanding.net>"]
readme = "README.md"
packages = [{ include = "shopeepy_wrapped" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.2"
requests = "2.28.1"
selenium = "4.7.2"
chromedriver-autoinstaller = "0.4.0"
beautifulsoup4 = "4.11.1"
pydantic = "^1.10.4"
strictyaml = "^1.6.2"
pathlib = "^1.0.1"
numpy = "^1.24.2"
keyring = "^23.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pytest = "^7.2.1"
mypy = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
tox = "^4.4.5"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
